# osl-data-science.github.io

./: .editorconfig  .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  CNAME  README.md  index.html  mkdocs.yaml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
conda/: dev.yaml
containers/: Dockerfile  compose.yaml
dashboards/: index.html
docs/: contributing.md  example.ipynb  index.md  installation.md
donate/: index.html
linkedin/: index.html
mentors/: index.html
pages/: index.md
pages/dashboards/: README.md  index.md
pages/dashboards/example/: index.md
pages/mentors/: index.md
pages/projects/: index.md
pages/projects/example/: data.py  index.html  index.md  index.qmd
pages/projects/example/index_files/libs/bootstrap/: bootstrap-c1242d0537452e7dbe79e2e3fc1003df.min.css  bootstrap-e833193ee9d623e1046324b7e8ef2c0c.min.css
pages/projects/example/index_files/libs/quarto-dashboard/: components.js  datatables.min.css  datatables.min.js  stickythead.js  web-components.js
pages/projects/video-game-sales-analysis/: index.html  index.md
pages/projects/video_games_sales/: index.html
pages/projects/video_games_sales/index_files/libs/bootstrap/: bootstrap-e833193ee9d623e1046324b7e8ef2c0c.min.css
projects/: index.html
projects/example/: index.html
projects/video-game-sales-analysis/: index.html
scripts/: check-broken-links-internal.py  check-broken-links-md.py  clean-output.py  gen_ref_nav.py
scripts/building/: main.py
src/osl_data_science/: __init__.py  datatools.py  main.py
src/osl_data_science/dashboards/example/: __init__.py  metadata.yaml
src/osl_data_science/projects/example/: __init__.py  dash.py  metadata.yaml  model.py
src/osl_data_science/projects/video_games_sales/: __init__.py  dash.py  data.py  metadata.yaml  model.py
src/osl_data_science/templates/: dashboard.md.tpl  index.md.tpl
tests/: __init__.py
theme/: base.html  dashboards.html  home.html  team.html
theme/images/dashboards/: README.md
twitter/: index.html
youtube/: index.html
